2015-12-31  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (AM_MAKEFLAGS): Set --no-print-directory.

2015-10-16  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Make zlib mandatory.

2015-10-15  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.164.
	* NEWS: Add 0.164 additions.

2015-10-07  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add AM_SILENT_RULES([yes]).

2015-09-24  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* configure.ac: Use -fPIC instead of -fpic to avoid relocation
	overflows in some platforms.

2015-07-11  Pino Toscano  <toscano.pino@tiscali.it>

	* .gitignore: Add more generated files, and anchor some of the
	existing ones.

2015-06-19  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.163.
	* NEWS: Mention 0.163 is bug fixes only.

2015-06-10  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Set version to 0.162.
	* NEWS: Add 0.162 additions.

2015-06-08  Mark Wielaard  <mjw@redhat.com>

	* configure.ac (ADD_STACK_USAGE_WARNING): New conditional based on
	gcc -Wstack-usage check.

2015-05-31  Mark Wielaard  <mjw@redhat.com>

	* configure.ac (MODVERSION): Define using LIBEBL_SUBDIR, eu_version
	and ac_cv_build.

2015-05-31  Mark Wielaard  <mjw@redhat.com>

	* configure.ac (use_undefined): Use AC_LINK_IFELSE. AC_DEFINE
	CHECK_UNDEFINED.

2015-05-30  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Check for bunzip2. Check flex and bison are
	installed in maintainer-mode. Otherwise check libdw/known-dwarf.h
	is already generated.

2015-05-21  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: Add --enable-sanitize-undefined.
	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Rename to...
	(AM_DISTCHECK_CONFIGURE_FLAGS): this. Add --enable-sanitize-undefined.

2015-05-04  Anthony G. Basile  <blueness@gentoo.org>

	* configure.ac (argp_LDADD): Check if libc has argp and set
	argp_LDADD accordingly.

2015-05-03  Max Filippov  <jcmvbkbc@gmail.com>

	* configure.ac (DEMANGLE): Fix enable_demangler setting.
